--- a/index.html
+++ b/index.html
@@ -11,26 +11,34 @@
     <hr>
     <div>1.vue指令</div>
     <ol>
-        <li><a href="./example/helloworld.html">Hello World 实例</a></li>
-        <li><a href="./example/v-if.html">v-if & v-else & v-show 实例</a></li>
-        <li><a href="./example/v-for.html">v-for实例</a></li>
-        <li><a href="./example/v-html.html">v-text & v-html 实例</a></li>
-        <li><a href="./example/v-on.html">v-on 实例</a></li>
-        <li><a href="./example/v-model.html">v-model 数据源绑定实例</a></li>
-        <li><a href="./example/v-bind.html">v-bind 实例</a></li>
-        <li><a href="./example/others.html">v-pre & v-cloak & v-once 实例</a></li>
+        <li><a href="./example/helloworld.html">1.Hello World 实例</a></li>
+        <li><a href="./example/v-if.html">2.v-if & v-else & v-show 实例</a></li>
+        <li><a href="./example/v-for.html">3.v-for实例</a></li>
+        <li><a href="./example/v-html.html">4.v-text & v-html 实例</a></li>
+        <li><a href="./example/v-on.html">5.v-on 实例</a></li>
+        <li><a href="./example/v-model.html">6.v-model 数据源绑定实例</a></li>
+        <li><a href="./example/v-bind.html">7.v-bind 实例</a></li>
+        <li><a href="./example/others.html">8.v-pre & v-cloak & v-once 实例</a></li>
     </ol>
     <div>2.全局API</div>
     <ol>
-        <li><a href="./API/Vue.directive.html">Vue.directive 实例</a></li>
-        <li><a href="./API/Vue.extend.html">Vue.extend 扩展实例构造器</a></li>
-        <li><a href="./API/Vue.set.html">Vue.set 全局操作</a></li>
-        <li><a href="./API/shengmingzhouqi.html">Vue 的生命周期</a></li>
-        <li><a href="./API/Template.html">Template 制作模板</a></li>
-        <li><a href="./API/Component-1.html">Component 初识组件</a></li>
-        <li><a href="./API/Component-2.html">Component 组件props属性设置</a></li>
-        <li><a href="./API/Component-3.html">Component 父子组件关系</a></li>
-        <li><a href="./API/Component-4.html">Component 标签</a></li>
+        <li><a href="./API/Vue.directive.html">9.Vue.directive 实例</a></li>
+        <li><a href="./API/Vue.extend.html">10.Vue.extend 扩展实例构造器</a></li>
+        <li><a href="./API/Vue.set.html">11.Vue.set 全局操作</a></li>
+        <li><a href="./API/shengmingzhouqi.html">12.Vue 的生命周期</a></li>
+        <li><a href="./API/Template.html">13.Template 制作模板</a></li>
+        <li><a href="./API/Component-1.html">14.Component 初识组件</a></li>
+        <li><a href="./API/Component-2.html">15.Component 组件props属性设置</a></li>
+        <li><a href="./API/Component-3.html">16.Component 父子组件关系</a></li>
+        <li><a href="./API/Component-4.html">17.Component 标签</a></li>
+    </ol>
+    <div>3.构造器里的选项</div>
+    <ol>
+        <li><a href="./example/propsData.html">18.propsData Option  全局扩展的数据传递</a></li>
+        <li><a href="./example/computed.html">19.computed Option 计算选项（新闻列表）</a></li>
+        <li><a href="./example/methods.html">20.Methods Option  方法选项</a></li>
+        <li><a href="./example/methods.html">20.Methods Option  方法选项</a></li>
+        <li><a href="./example/watch.html">21.Watch 选项 监控数据</a></li>
     </ol>
 </body>
 </html>
