构造器里的选项

--- a/example/methods.html
+++ b/example/methods.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,35 +8,40 @@
     <title>Methods Option 方法选项</title>
     <script src="../assets/js/vue.js"></script>
 </head>
+
 <body>
-    <h1>Methods Option  方法选项</h1>
+    <h1>Methods Option 方法选项</h1>
     <hr>
     <div id="app">
         {{a}}
-        <p><button @click="add(5,$event)">+</button></p>
-        <p><btn @click.native="add(2)"></btn></p>
+        <p>
+            <button @click="add(5,$event)">+</button>
+        </p>
+        <p>
+            <btn @click.native="add(2)"></btn>
+        </p>
     </div>
     <button onclick="app.add(3)">外部add</button>
-    
+
 
     <script>
-        var btn ={
-            template:`<button>组件add</button>`
+        var btn = {
+            template: `<button>组件add</button>`
         }
         var app = new Vue({
-            el:"#app",
-            data:{
-                a:1
+            el: "#app",
+            data: {
+                a: 1
             },
-            components:{
-                'btn':btn
+            components: {
+                'btn': btn
             },
-            methods:{
-                add:function(num,event){
-                    if(num!=""){
-                        this.a+=num;
-                    }else{
-                       this.a++; 
+            methods: {
+                add: function (num, event) {
+                    if (num != "") {
+                        this.a += num;
+                    } else {
+                        this.a++;
                     }
                     console.log(event);
                 }
@@ -43,4 +49,5 @@
         });
     </script>
 </body>
+
 </html>
