--- a/example/v-on.html
+++ b/example/v-on.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <title>v-on实例</title>
     <script src="../assets/js/vue.js"></script>
 </head>
+
 <body>
     <h1>v-on实例</h1>
     <hr>
@@ -21,23 +23,24 @@
 
     <script>
         var app = new Vue({
-            el:"#app",
-            data:{
-                score:0,
-                score2:2
+            el: "#app",
+            data: {
+                score: 0,
+                score2: 2
             },
-            methods:{
-                add:function(){
+            methods: {
+                add: function () {
                     this.score++;
                 },
-                subtract:function(){
+                subtract: function () {
                     this.score--;
                 },
-                onEnter:function(){
-                    this.score=this.score + parseInt(this.score2);
+                onEnter: function () {
+                    this.score = this.score + parseInt(this.score2);
                 }
             }
         })
     </script>
 </body>
+
 </html>
