--- a/example/others.html
+++ b/example/others.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <title>v-pre & v-cloak & v-once 实例</title>
     <script src="../assets/js/vue.js"></script>
 </head>
+
 <body>
     <h1>v-pre & v-cloak & v-once 实例</h1>
     <hr>
@@ -14,17 +16,20 @@
         <div v-pre>{{message}}</div>
         <div v-cloak>渲染完成后才显示</div>
         <div v-once>{{message}}</div>
-        <div><input type="text" v-model="message"></div>
-        <div >{{message}}</div>
+        <div>
+            <input type="text" v-model="message">
+        </div>
+        <div>{{message}}</div>
     </div>
 
     <script>
         var app = new Vue({
-            el:"#app",
-            data:{
-                message:'hello Vue!'
+            el: "#app",
+            data: {
+                message: 'hello Vue!'
             }
         })
     </script>
 </body>
+
 </html>
