--- a/example/v-model.html
+++ b/example/v-model.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,16 +8,25 @@
     <title>v-model数据源绑定实例</title>
     <script src="../assets/js/vue.js"></script>
 </head>
+
 <body>
     <h1>v-model数据源绑定实例 World</h1>
     <hr>
     <div id="app">
         <p>原始文本信息：{{message}}实例</p>
         <h3>文本框</h3>
-        <p>v-model<input type="text" v-model="message"></p>
-        <p>v-model.lazy<input type="text" v-model.lazy="message"></p>
-        <p>v-model.number<input type="text" v-model.number="message"></p>
-        <p>v-model.trim去空格<input type="text" v-model.trim="message"></p>
+        <p>v-model
+            <input type="text" v-model="message">
+        </p>
+        <p>v-model.lazy
+            <input type="text" v-model.lazy="message">
+        </p>
+        <p>v-model.number
+            <input type="text" v-model.number="message">
+        </p>
+        <p>v-model.trim去空格
+            <input type="text" v-model.trim="message">
+        </p>
         <hr>
         <h3>文本域</h3>
         <textarea name="" id="" cols="30" rows="10" v-model="message"></textarea>
@@ -27,11 +37,11 @@
         <hr>
         <h3>多选框绑定一个数组</h3>
         <p>
-            <input type="checkbox"  id="Kong" value="Kong" v-model="web_names">
+            <input type="checkbox" id="Kong" value="Kong" v-model="web_names">
             <label for="isTrue">Kong</label>
-            <input type="checkbox"  id="Dan" value="Dan" v-model="web_names">
+            <input type="checkbox" id="Dan" value="Dan" v-model="web_names">
             <label for="isTrue">Dan</label>
-            <input type="checkbox"  id="Ting" value="Ting" v-model="web_names">
+            <input type="checkbox" id="Ting" value="Ting" v-model="web_names">
             <label for="isTrue">Ting</label>
         </p>
         <p>{{web_names}}</p>
@@ -48,14 +58,15 @@
 
     <script>
         var app = new Vue({
-            el:"#app",
-            data:{
-                message:'hello Vue!',
-                isTrue:true,
-                web_names:[],
-                sex:'男'
+            el: "#app",
+            data: {
+                message: 'hello Vue!',
+                isTrue: true,
+                web_names: [],
+                sex: '男'
             }
         })
     </script>
 </body>
+
 </html>
