--- a/index.html
+++ b/index.html
@@ -89,6 +89,21 @@
             <a href="./example/Extends.html">23.Extends Option 扩展选项</a>
         </li>
     </ol>
+    <div>4.实例和内置组件</div>
+    <ol>
+        <li>
+            <a href="./example/example01.html">24.example methods 01</a>
+        </li>
+        <li>
+            <a href="./example/example02.html">25.example methods 02</a>
+        </li>
+        <li>
+            <a href="./example/example03.html">26.example methods 03</a>
+        </li>
+        <li>
+            <a href="./example/slot.html">27.内置组件 -slot讲解</a>
+        </li>
+    </ol>
 </body>
 
 </html>
