--- a/Lee/index.html
+++ b/Lee/index.html
@@ -8,14 +8,57 @@
     <script src="../assets/js/vue.js "></script>
 </head>
 <body>
-    <div id="app">{{content}}</div>
+    <div id="app">
+        <input type="text" v-model="inputValue">
+        <button @click="handleBtnClick">提交</button>
+        <ul>
+            <!-- <li v-for="item in list">{{item}}</li> -->
+            <todo-item v-bind:content="item"
+                    v-bind:index="index"
+                    v-for="(item,index) in list"
+                    @delete="handleItemDelete">
+            </todo-item>
+        </ul>
+    </div>
 </body>
 <script>
+    // Vue.component("TodoItem",{
+    //     props: ['content'],
+    //     template: "<li>{{content}}</li>"
+    // })
+
+    var TodoItem = {
+        props: ['content','index'],
+        template: "<li @click='handleItemClick'>{{content}}</li>",
+        methods: {
+            handleItemClick: function(){
+                this.$emit("delete", this.index);
+            }
+        }
+    }
+
     var app = new Vue({
         el:'#app',
+        components: {
+            TodoItem: TodoItem
+        },
         data: {
-            content: 'hello world'
+            // content: '输入todoList'
+            list:[],
+            inputValue: ''
+        },
+        methods: {
+            handleBtnClick: function(){
+                this.list.push(this.inputValue);
+                this.inputValue = '';
+            },
+            handleItemDelete: function(index){
+                this.list.splice(index,1);
+            }
         }
     })
+    // setTimeout(() => {
+    //     app.$data.content = 'bye world'
+    // }, 2000)
 </script>
 </html>
