--- a/Lee/计算属性的setter和getter.html
+++ b/Lee/计算属性的setter和getter.html
@@ -8,8 +8,8 @@
     <script src="../assets/js/vue.js"></script>
 </head>
 <body>
-    <div id="app"></div>
-        {{fullName}}
+    <div id="app">{{fullName}}</div>
+        
     <script>
         var vm = new Vue({
             el: "#app",
