--- a/Lee/组件参数校验与非props特性.html
+++ b/Lee/组件参数校验与非props特性.html
@@ -5,8 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>组件参数校验与非props特性</title>
+    <script src="../assets/js/vue.js"></script>
 </head>
 <body>
-    
+    <div id="root">
+        <child :content="{1213:1}"></child>
+    </div>
+
+    <script>
+        Vue.component('child', {
+            props: {
+                content: [ Number, String]
+            },
+            template: '<div>{{content}}</div>'
+        })
+
+        var vm = new Vue({
+            el: '#root'
+        })
+    </script>
 </body>
 </html>
