--- a/Lee/在vue中同时使用过度和动画.html
+++ b/Lee/在vue中同时使用过度和动画.html
@@ -20,6 +20,7 @@
 </head>
 <body>
   <div id="root">
+    <!-- duration="{enter:5000, leave:10000}" -->
     <transition 
       type="transition"
       name="fade"
